--- a/src/app/modules/pages-module/footer/footer/footer.component.html
+++ b/src/app/modules/pages-module/footer/footer/footer.component.html
@@ -1,6 +1,9 @@
-<div class="d-md-flex justify-content-between align-items-center footer">
-    <div >
-        © 2024 Valorware Soft. All rights reserved. Privacy Policy |Terms of use
+<div class="footer">
+    <div class="custom-div">
+        <span> © 2024 Valorware Soft. </span>
+        <span>
+            All rights reserved. Privacy Policy |Terms of use
+        </span>
     </div>
     <div>
         <div class="d-flex align-items-center">
