--- a/src/app/modules/navbar-module/navbar/navbar.component.scss
+++ b/src/app/modules/navbar-module/navbar/navbar.component.scss
@@ -1,17 +1,39 @@
 .content {
-    height: calc(100vh - 76px) !important;
+    height: 100vh !important;
     padding: 20px;
+    padding-bottom: 0px !important;
 
     @media (max-width: 992px) {
         padding-top: 15px !important;
-        height: calc(100vh - 51px) !important;
+        // height: calc(100vh - 51px) !important;
         // height: calc(100vh - 234px) !important;
     }
 
     overflow: scroll;
-    &::-webkit-scrollbar{
+
+    &::-webkit-scrollbar {
         display: none;
     }
+}
+
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.content {
+    margin-top: 60px !important;
+    flex: 1;
+    overflow-y: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.app-footer {
+    margin-top: auto !important;
 }
 
 
@@ -52,7 +74,7 @@ img {
 }
 
 .sub-title {
- 
+
     font-weight: 400;
     font-style: normal;
     font-size: 12px;
@@ -67,4 +89,12 @@ img {
         font-size: 12px !important;
         letter-spacing: 1.75px !important;
     }
+}
+
+.mat-mdc-tooltip {
+    z-index: 1100 !important;
+}
+
+.fixed-top {
+    z-index: 1000 !important;
 }
