--- a/src/app/modules/pages-module/footer/footer/footer.component.scss
+++ b/src/app/modules/pages-module/footer/footer/footer.component.scss
@@ -1,11 +1,32 @@
-img{
+img {
     height: 18px;
     width: 18px;
     margin-left: 10px;
 }
 
-.footer{
-    height: 40px !important;
-    font-size: 12px ;
+.footer {
+    min-height: 40px !important;
+    font-size: 12px;
     width: 100% !important;
+    padding: 15px 20px !important;
+    margin-top: 30px !important;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    @media screen and (max-width : 768px) {
+        justify-content: center !important;
+        flex-direction: column !important;
+        row-gap: 10px !important;
+    }
+}
+
+.custom-div{
+    @media screen and (max-width : 450px) {
+        display: flex;
+        align-items: center;
+        justify-content: center !important;
+        flex-direction: column !important;
+        row-gap: 10px !important;
+    }
 }
