--- a/src/app/modules/navbar-module/navbar-links/contact-us/contact-us.component.html
+++ b/src/app/modules/navbar-module/navbar-links/contact-us/contact-us.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-  <div class="header">
+  <div >
     <p class="text-center main-heading m-0">Contact Us</p>
     <p class="text-center main">
       Have questions or inquiries? We're here to help! Whether you're looking for more information about our services,
