--- a/src/app/modules/navbar-module/navbar-links/get-custom-code/get-custom-code.component.scss
+++ b/src/app/modules/navbar-module/navbar-links/get-custom-code/get-custom-code.component.scss
@@ -61,7 +61,7 @@
     line-height: 1.7;
     color: var(--sub-title-color);
 
-    span {
+    .cursor-pointer {
         cursor: pointer !important;
     }
 }
