--- a/src/app/modules/pages-module/internet-disconnect/internet-disconnect.component.html
+++ b/src/app/modules/pages-module/internet-disconnect/internet-disconnect.component.html
@@ -1,1 +1,13 @@
-<p>internet-disconnect works!</p>
+<div class="wrapper">
+    <div class="content">
+        <div class="text-center">
+            <img src="../../../../assets/images/internet-disconnected.png" alt="Logo" />
+            <p class="mt-3 mb-1 main-heading">Oops! It seems you're not connected to the internet.
+
+            </p>
+            <p class="sub-heading-custom">
+                Please check your connection and try again.</p>
+
+        </div>
+    </div>
+</div>
