--- a/src/app/modules/navbar-module/navbar-links/contact-us/contact-us.component.scss
+++ b/src/app/modules/navbar-module/navbar-links/contact-us/contact-us.component.scss
@@ -48,3 +48,8 @@ input[type=number]::-webkit-outer-spin-button {
     line-height: 1.7;
     color: var(--sub-title-color);
 }
+
+button{
+    background-color: var(--button-color) !important;
+    color: var(--background-color) !important;
+}
