--- a/src/app/modules/navbar-module/navbar-links/get-custom-code/get-custom-code.component.scss
+++ b/src/app/modules/navbar-module/navbar-links/get-custom-code/get-custom-code.component.scss
@@ -65,3 +65,8 @@
         cursor: pointer !important;
     }
 }
+
+button{
+    background-color: var(--button-color) !important;
+    color: var(--background-color) !important;
+}
