--- a/src/app/modules/pages-module/access-denied/access-denied.component.html
+++ b/src/app/modules/pages-module/access-denied/access-denied.component.html
@@ -1,1 +1,28 @@
-<p>access-denied works!</p>
+<nav class="navbar navbar-expand-lg bg-light fixed-top">
+    <div class="container-fluid">
+        <div class="d-flex align-items-center" (click)="navigate('home')">
+            <div>
+                <img src="../../../../assets/images/logo.png" alt="Logo" width="60" height="60" />
+            </div>
+            <div class="ps-1 d-grid">
+                <span class="title">Ocean of Code Craft</span>
+                <span class="sub-title">A Product by Valorware Soft</span>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<div class="wrapper">
+    <div class="content">
+      <div class="text-center">
+        <img src="../../../../assets/images/access-denied.png" alt="Logo" />
+        <p class="mt-3 mb-1 main-heading">Access Denied
+        </p>
+        <p class="sub-heading-custom">
+            You do not have permission to access this page.</p>
+
+            <button (click)="navigate('home')" class="mt-4">Go to Home</button>
+      </div>
+    </div>
+    <app-footer></app-footer>
+</div>
