--- a/src/app/modules/navbar-module/navbar-links/about-us/about-us.component.html
+++ b/src/app/modules/navbar-module/navbar-links/about-us/about-us.component.html
@@ -7,14 +7,9 @@
         components to streamline your development process. Whether you're a beginner or an experienced developer, our
         platform is tailored to meet your needs and make coding more accessible and efficient.</p>
 
-    <p class=" sub-title-heading mb-3 ">What We Offer</p>
+    <p class=" sub-title-heading mb-3 cursor-pointer" (click)="navigate('home')">What We Offer</p>
     <p class="main">At Ocean of Code Craft, we offer an extensive library of code snippets for various elements
         essential to web development. Our collection includes:</p>
-    <!-- <div class="row">
-        <div class="col-12 col-sm-4 col-lg-3" *ngFor="let component of components">
-            {{ component }}
-        </div>
-    </div> -->
     <ul class="list-design">
         <li>Forms (Includes Multi-step Forms) </li>
         <li>Charts</li>
@@ -58,7 +53,7 @@
     <p class="main mb-5">
         Based on your selection, our platform will generate the appropriate code, saving you valuable time and effort.
     </p>
-    <p class=" sub-title-heading mb-3">Personalized Requests</p>
+    <p class=" sub-title-heading mb-3 cursor-pointer" (click)="navigate('get-custom-code')">Personalized Requests</p>
     <p class="main">If you have specific requirements that are not available on our webpage, you can easily reach out to
         us. We offer the
         ability to:</p>
@@ -72,7 +67,7 @@
         inquiries
         or assistance.
     </p>
-    <p class=" sub-title-heading mb-3">Our Services</p>
+    <p class=" sub-title-heading mb-3 cursor-pointer " (click)="navigate('services')">Our Services</p>
     <p class="main">In addition to our extensive library of code snippets, we provide specialized services to meet your
         unique needs:</p>
     <ol class="list-design mb-5 ">
