--- a/src/app/modules/navbar-module/navbar-links/about-us/about-us.component.html
+++ b/src/app/modules/navbar-module/navbar-links/about-us/about-us.component.html
@@ -71,12 +71,8 @@
     <p class="main">In addition to our extensive library of code snippets, we provide specialized services to meet your
         unique needs:</p>
     <ol class="list-design mb-5 ">
-        <li class="mb-2"> <span>Custom Code Development :</span>&nbsp; We offer custom code development services based
-            on your specific requirements. Whether you need a unique feature or
-            a complete component, our team of experienced developers is here to help. </li>
-        <li><span>Figma Design to Code :</span>&nbsp; We can transform your Figma designs into functional, responsive
-            code. This service ensures that your design vision
-            is accurately translated into a live application, streamlining the development process.</li>
+        <li class="mb-2"> <span>UX Design Services :</span>&nbsp; We specialize in UX design services, crafting end-to-end application experiences or unique page designs tailored to your specific needs. Our team excels in translating your vision into intuitive and visually captivating interfaces.</li>
+        <li><span>Frontend Development :</span>&nbsp; Transforming Figma designs into responsive, functional code is our expertise. With meticulous attention to detail, we ensure your designs come to life seamlessly, accelerating the development process.</li>
     </ol>
 
     <p class=" sub-title-heading mb-3">Future Plans</p>
