--- a/src/app/modules/navbar-module/navbar-links/services/services.component.html
+++ b/src/app/modules/navbar-module/navbar-links/services/services.component.html
@@ -1,1 +1,22 @@
-<p>services works!</p>
+<div class="main-cards">
+    <div class="card">
+        <img src="../../../../../assets/images/ux-design.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+            <h5 class="card-title mb-3">UX Design Services</h5>
+            <p class="card-text">Unlock the potential of your digital vision with our comprehensive UX Design Services.
+                We specialize in crafting captivating user experiences that seamlessly blend functionality with
+                aesthetics, ensuring your applications leave a lasting impression.</p>
+        </div>
+        <a href="/contact-us" class="card-link">Know more...</a>
+    </div>
+    <div class="card">
+        <img src="../../../../../assets/images/ui-development.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+            <h5 class="card-title mb-3">Frontend Development</h5>
+            <p class="card-text">Bring your digital vision to life with our Frontend Development Services. From turning
+                Figma designs into pixel-perfect interfaces to optimizing code for performance and accessibility, we're
+                your trusted partner in building exceptional web applications.</p>
+        </div>
+        <a href="/contact-us" class="card-link">Know more...</a>
+    </div>
+</div>
