--- a/src/app/modules/main-module/main/main.component.html
+++ b/src/app/modules/main-module/main/main.component.html
@@ -1,7 +1,13 @@
-<p>main works!</p>
-
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quo facere doloremque autem odio recusandae eius maiores nulla. Incidunt voluptas vitae magnam labore adipisci minus doloribus earum in beatae voluptates.
-
-<br>
-<button (click)="previewCode()">preview</button>
-<button (click)="getCode()">get code</button>
+<div class="main-cards">
+    <div class="card" *ngFor="let card of cardsData">
+        <img [src]="card.imageUrl" alt="" class="card-img-top">
+        <div class="card-body">
+            <h5 class="card-title mb-3">{{ card.title }}</h5>
+            <p class="card-text">{{ card.description }}</p>
+        </div>
+        <div class="d-flex align-items-center justify-content-between">
+            <a [href]="card.previewLink" class="card-link">Preview</a>
+            <a [href]="card.getCodeLink" class="card-link">Get Code</a>
+        </div>
+    </div>
+</div>
