--- a/src/app/modules/navbar-module/navbar-links/home/home.component.html
+++ b/src/app/modules/navbar-module/navbar-links/home/home.component.html
@@ -1,1 +1,13 @@
-<app-main></app-main>
+<div class="main-cards">
+    <div class="card" *ngFor="let card of cardsData">
+        <img [src]="card.imageUrl" alt="" class="card-img-top">
+        <div class="card-body">
+            <h5 class="card-title mb-3">{{ card.title }}</h5>
+            <p class="card-text">{{ card.description }}</p>
+        </div>
+        <div class="d-flex align-items-center justify-content-between">
+            <a [href]="card.previewLink" class="card-link">Preview</a>
+            <a [href]="card.getCodeLink" class="card-link">Get Code</a>
+        </div>
+    </div>
+</div>
