--- a/src/app/modules/navbar-module/navbar/navbar.component.html
+++ b/src/app/modules/navbar-module/navbar/navbar.component.html
@@ -45,10 +45,10 @@
           <a class="nav-link" (click)="navigate('sign-up')">Sign Up</a>
         </li>
         <li class="nav-item"  *ngIf="!login">
-          <a class="nav-link" (click)="navigate('login')">Login</a>
+          <a class="nav-link" (click)="navigate('login')">Sign In</a>
         </li>
         <li class="nav-item"  *ngIf="login">
-          <a class="nav-link" (click)="navigate('logout')">Logout</a>
+          <a class="nav-link" (click)="navigate('logout')">Sign Out</a>
         </li>
         <li class="nav-item li-custom-button">
           <a (click)="toggleTheme()">
