--- a/src/app/modules/navbar-module/navbar-links/about-us/about-us.component.html
+++ b/src/app/modules/navbar-module/navbar-links/about-us/about-us.component.html
@@ -71,8 +71,12 @@
     <p class="main">In addition to our extensive library of code snippets, we provide specialized services to meet your
         unique needs:</p>
     <ol class="list-design mb-5 ">
-        <li class="mb-2"> <span>UX Design Services :</span>&nbsp; We specialize in UX design services, crafting end-to-end application experiences or unique page designs tailored to your specific needs. Our team excels in translating your vision into intuitive and visually captivating interfaces.</li>
-        <li><span>Frontend Development :</span>&nbsp; Transforming Figma designs into responsive, functional code is our expertise. With meticulous attention to detail, we ensure your designs come to life seamlessly, accelerating the development process.</li>
+        <li class="mb-2"> <span>UX Design Services :</span>&nbsp; We specialize in UX design services, crafting
+            end-to-end application experiences or unique page designs tailored to your specific needs. Our team excels
+            in translating your vision into intuitive and visually captivating interfaces.</li>
+        <li><span>Frontend Development :</span>&nbsp; Transforming Figma designs into responsive, functional code is our
+            expertise. With meticulous attention to detail, we ensure your designs come to life seamlessly, accelerating
+            the development process.</li>
     </ol>
 
     <p class=" sub-title-heading mb-3">Future Plans</p>
@@ -80,6 +84,7 @@
     <ul class="list-design mb-5 ">
         <li class="mb-2"> <span>Video Tutorials :</span>&nbsp; Step-by-step guides to help you understand and implement
             our customized code more clearly. </li>
+        <li><span>Enhanced Customer Support :</span>&nbsp; Adding an additional customer support channel to ensure your queries are resolved quickly and efficiently.</li>
         <li><span>Backend Code :</span>&nbsp; Expanding our offerings to include backend code components.</li>
     </ul>
     <p class=" sub-title-heading mb-3">Why Choose Us?</p>
