--- a/src/app/modules/navbar-module/navbar/navbar.component.html
+++ b/src/app/modules/navbar-module/navbar/navbar.component.html
@@ -57,6 +57,15 @@
               [matTooltip]="SWITCH_TO_DARK_MODE" matTooltipPosition="above"></i>
           </a>
         </li>
+        <!-- <li *ngIf="login" class="userProfile">
+         
+            <img [src]="loginUserPhoto" alt="">
+          
+        </li> -->
+        <!-- <li class="nav-item li-custom-button" *ngIf="login">
+          <span>Welcome {{loginUserName}}</span>
+        </li> -->
+
       </ul>
     </div>
   </div>
