--- a/src/app/modules/navbar-module/navbar-links/about-us/about-us.component.html
+++ b/src/app/modules/navbar-module/navbar-links/about-us/about-us.component.html
@@ -82,7 +82,7 @@
     <p class=" sub-title-heading mb-3">Future Plans</p>
     <p class="main">We are continuously working to enhance our platform. Here’s what you can look forward to:</p>
     <ul class="list-design mb-5 ">
-        <li class="mb-2"> <span>Video Tutorials :</span>&nbsp; Step-by-step guides to help you understand and implement
+        <li> <span>Video Tutorials :</span>&nbsp; Step-by-step guides to help you understand and implement
             our customized code more clearly. </li>
         <li><span>Enhanced Customer Support :</span>&nbsp; Adding an additional customer support channel to ensure your queries are resolved quickly and efficiently.</li>
         <li><span>Backend Code :</span>&nbsp; Expanding our offerings to include backend code components.</li>
